# quotio-desktop

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md  package.json  test_extract.rs
.github/workflows/: release.yml
apps/desktop/: .gitignore  README.md  package-lock.json  package.json
apps/desktop/public/rose/: README.md  manifest.json
apps/desktop/src/: App.css  App.tsx  MenuBarPanel.tsx  i18n.tsx  main.tsx  menubar.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AddAccountModal.tsx  AppShell.tsx  Select.tsx  Switch.tsx  TunnelCard.tsx  UpdateDialog.tsx  about-rose.css  about.css  icons.tsx  rose-theme.css  shell.css
apps/desktop/src/components/dashboard/: AccountSummaryPanel.tsx  DashboardScreen.tsx  KpiCard.tsx  ManagementDiagnosticsPanel.tsx  ProviderSummaryPanel.tsx  ProxyStatusPanel.tsx  UsageChartsPanel.tsx  UsageFilterBar.tsx  UsageKpiGrid.tsx  dashboard.css
apps/desktop/src/components/sections/: AgentsScreen.tsx  ApiKeysScreen.tsx  FallbackScreen.tsx  LogsScreen.tsx  ProvidersScreen.tsx  QuotaScreen.tsx  SettingsScreen.tsx  TwoFactorAuthScreen.tsx  agents-rose.css  agents.css  api-keys-floral.css  logs-rose.css  logs.css  providers-rose.css  providers.css  quota-rose.css  quota.css  settings-rose.css  settings.css  twofa-rose.css  twofa.css
apps/desktop/src/dev/: mockBackend.test.ts  mockBackend.ts
apps/desktop/src/lib/: codexReasoning.test.ts  codexReasoning.ts  format.test.ts  format.ts  providerLogos.tsx  tauri.ts  theme.test.ts  theme.ts
apps/desktop/src/state/: dashboardModel.ts  usageDashboard.ts  useAppState.ts  useUpdater.ts
assets/: .gitkeep
crates/quotio-core/: Cargo.toml
crates/quotio-core/src/: agent_config.rs  agents.rs  bridge.rs  codex_catalog.rs  codex_launch.rs  codex_session_visibility.rs  dream_skin.rs  kiro_idc.rs  kiro_sidecar.rs  lib.rs  management.rs  native_oauth.rs  proxy_download.rs  quota.rs  scheduler.rs  tunnel.rs  usage_store.rs
crates/quotio-platform/: Cargo.toml
crates/quotio-platform/src/: lib.rs
crates/quotio-types/: Cargo.toml
crates/quotio-types/src/: lib.rs
docs/: MIGRATION.md  UI_STYLE_PROMPTS.md
docs/superpowers/plans/: 2026-07-10-codex-catalog-discovery.md  2026-07-12-floating-window-redesign.md  2026-07-16-rose-floral-theme.md  2026-07-16-v0.6.4-portable-repackage.md  2026-07-16-windows-powershell-fallback.md  2026-07-17-codex-login-only-session-recovery.md
docs/superpowers/specs/: 2026-07-10-codex-catalog-discovery-design.md  2026-07-12-floating-window-redesign-design.md  2026-07-16-rose-floral-theme-design.md  2026-07-16-v0.6.4-portable-repackage-design.md  2026-07-16-windows-powershell-fallback-design.md  2026-07-17-codex-login-only-session-recovery-design.md
resources/dream-skin/: INTEGRATION.md  NOTICE.md  README.upstream.md  UPSTREAM-SNAPSHOT.md
resources/dream-skin/windows/assets/: dream-skin.css  renderer-inject.js
resources/dream-skin/windows/scripts/: common-windows.ps1  config-utf8.ps1  injector.mjs  restore-dream-skin.ps1  start-dream-skin.ps1
resources/dream-skin/windows/tests/: run-runtime-tests.ps1
resources/dream-skin/windows/themes/aurora/: theme.css  theme.json
resources/dream-skin/windows/themes/clear-custom/: theme.css  theme.json
resources/dream-skin/windows/themes/dream/: theme.css  theme.json
resources/dream-skin/windows/themes/hatsune-miku/: theme.css  theme.json
resources/dream-skin/windows/themes/inspiration-cosmos/: theme.css  theme.json
resources/dream-skin/windows/themes/midnight/: theme.css  theme.json
resources/dream-skin/windows/themes/pink-custom/: theme.css  theme.json
resources/dream-skin/windows/themes/purple-night/: theme.css  theme.json
resources/dream-skin/windows/themes/red-white-scifi/: theme.css  theme.json
resources/dream-skin/windows/themes/stage-black-gold/: theme.css  theme.json
resources/dream-skin/windows/themes/wealth-worker/: theme.css  theme.json
resources/proxy/darwin/: README.md
resources/proxy/linux/: README.md
resources/proxy/windows/: README.md
scripts/: package-portable.ps1  set-version.ps1
设计图/2FA/: 2fa-reference.html  design-tokens.json
设计图/仪表盘/: imagegen-prompt.md
设计图/关于/: README.md  design-tokens.json  imagegen-prompt.md
设计图/原版/: README.md
设计图/原版/2FA/: README.md  imagegen-prompt.md
设计图/原版/仪表盘/: README.md  dashboard-reference.html  design-tokens.json
设计图/原版/悬浮窗/: design-tokens.json
设计图/原版/日志/: README.md  design-tokens.json  imagegen-prompt.md
设计图/原版/智能体/: README.md  design-tokens.json  imagegen-prompt.md
设计图/原版/服务商/: providers-reference.html
设计图/原版/设置/: README.md  imagegen-prompt.md  settings-reference.html
设计图/原版/额度/: README.md
设计图/悬浮窗/: README.md  design-tokens.json  floating-window-reference.html  imagegen-prompt.md
设计图/日志/: logs-reference.html  proxy-imagegen-prompt.md  proxy-logs-reference.html
设计图/智能体/: agent-reference.html
设计图/服务商/: README.md  design-tokens.json  imagegen-prompt.md
设计图/粉色花卉主题/: README.md  design-tokens.json  imagegen-prompts.md  验证记录.md
设计图/粉色花卉主题/素材/: README.md
设计图/粉色花卉主题/素材/云纹/: cloud-assets.md
设计图/设置/: design-tokens.json
设计图/额度/: README.md  design-tokens.json  imagegen-prompt.md  quota-reference.html
