[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/quotio-core",
    "crates/quotio-platform",
    "crates/quotio-types",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }