[package]
name = "quotio-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
quotio-platform = { path = "../quotio-platform" }
quotio-types = { path = "../quotio-types" }
serde.workspace = true
serde_json.workspace = true
urlencoding = "2.1.3"
uuid = { version = "1.23.2", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
chrono = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
