[package]
name = "quotio-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
quotio-platform = { path = "../quotio-platform" }
quotio-types = { path = "../quotio-types" }
serde.workspace = true
serde_json.workspace = true
urlencoding = "2.1.3"
uuid = { version = "1.23.2", features = ["v4"] }
# socks-proxy:用户的全局代理常填 socks5://(clash/karing 的 socks 端口)。不启用这个
# feature 时 ureq 的 connect_socks 直接返回 Err("SOCKS feature disabled."),OAuth / 额度
# 查询会连不上,而不是回退直连——所以必须开。
ureq = { version = "2", features = ["json", "socks-proxy"] }
flate2 = "1"
tar = "0.4"
base64 = "0.22"
chrono = "0.4"
rand = "0.8"
url = "2"
tiny_http = "0.12"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
