[package]
name = "quotio-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
quotio-types = { path = "../quotio-types" }
keyring.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
