[package]
name = "quotio-desktop"
version = "0.5.0"
description = "Quotio cross-platform desktop app"
authors = ["Quotio contributors"]
edition.workspace = true
license.workspace = true

[lib]
name = "quotio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
quotio-core = { path = "../../../crates/quotio-core" }
quotio-platform = { path = "../../../crates/quotio-platform" }
quotio-types = { path = "../../../crates/quotio-types" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-autostart.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-process.workspace = true
